--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,64 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      SQL Playground
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Enter SQL Query</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+         <!-- Dropdown for default SQL commands -->
+         <ion-item>
+          <ion-label>Default Commands</ion-label>
+          <ion-select (ionChange)="setDefaultQuery($event)">
+            <ion-select-option *ngFor="let sqlCommand of sqlCommands" [value]="sqlCommand.value">
+              {{ sqlCommand.displayText }}
+            </ion-select-option>
+          </ion-select>
+        </ion-item>
+      <ion-textarea [(ngModel)]="query" rows="4" placeholder="Enter your SQL query here..."></ion-textarea>
+      <ion-button expand="block" (click)="executeQuery()">Execute Query</ion-button>
+    </ion-card-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-card-content>
+      <ion-item>
+        <ion-label>Advanced Commands</ion-label>
+        <ion-select (ionChange)="setDefaultQuery($event)">
+          <ion-select-option *ngFor="let sqlCommand of advancedSqlCommands" [value]="sqlCommand.value">
+            {{ sqlCommand.displayText }}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+      <!-- Optionally, display the selected advanced query -->
+      <ion-textarea [(ngModel)]="query" rows="4" placeholder="Selected advanced SQL query will appear here..."></ion-textarea>
+      <ion-button expand="block" (click)="executeQuery()">Execute Advanced Query</ion-button>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="result.length > 0">
+    <ion-card-header>
+      <ion-card-title>Query Result</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <table>
+        <thead>
+          <tr>
+            <th *ngFor="let column of result[0].columns">{{ column }}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let row of result[0].values">
+            <td *ngFor="let cell of row">{{ cell }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </ion-card-content>
+  </ion-card>
+
+  
 </ion-content>
